# proto2prod-common

./: pyproject.toml
.github/workflows/: ci.yml
src/proto2prod_common/: fs_utils.py  llm_client.py  xml_exporter.py
src/proto2prod_common.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
