[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto2prod-common"
version = "0.1.0"
description = "Shared utilities for Proto2Prod platform"
authors = [{ name="Your Team", email="team@yourorg.com" }]
packages = ["proto2prod_common"]

[tool.setuptools.packages.find]
where = ["src"]
